Adding Finished Project with Log Class and Quests Complete